# pdf_contract_masking

./: .gitignore  README.md  create_sample_contract.py  customer_redaction_rules.json  environment.yml  environment_cuda.yml  install_log.txt  pyproject.toml  redaction_config.json  requirements.txt
.github/workflows/: ci.yml
pdf_contract_masking.egg-info/: PKG-INFO  top_level.txt
scripts/: capture_redaction_screenshot.py  download_noto.py  dump_pdf_words.py  get_noto.py  inspect_drawings.py  inspect_fitz_attrs.py  inspect_output_annots.py  inspect_pdf.py  process_one.py  smoke_test.py  test_apply_redactions.py  write_exact_sample3.py
src/pdf_contract_masking/: IMPROVEMENTS.md  TECHNICAL_DOCUMENTATION.md  __init__.py  cli.py  config.py  constants.py  contract_masking.py  contract_masking_refactored.py  knowledge_base.py  logger.py  ner.py  processor.py  redactor.py  rule_learner.py  utils.py
src/pdf_contract_masking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/pdf_contract_masking/diagrams/: diagrams.puml  sequence.puml
tests/: pdf_helpers.py  test_basic.py  test_cli.py  test_complex_sample3.py  test_font_embed.py  test_integration_redaction.py  test_overlay.py  test_redaction_pipeline.py  test_utils_extra.py
