[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "pdf_contract_masking"
version = "0.0.0"
description = "PDF contract masking utilities"
readme = "README.md"
authors = [{ name = "you", email = "you@example.com" }]

[project.scripts]
pdf-mask = "pdf_contract_masking.cli:main"
